// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MentionPopover > MentionPopover - Snapshots > matches snapshot with empty users 1`] = `null`;

exports[`MentionPopover > MentionPopover - Snapshots > matches snapshot with selected index 1`] = `
<div
  aria-label="User suggestions"
  class="absolute z-50 mt-1 w-[var(--mention-popover-width)] max-h-[var(--mention-popover-max-height)] overflow-y-auto rounded-md border border-border bg-popover p-2"
  data-cy="mention-popover"
  data-testid="mention-popover"
  role="listbox"
>
  <div
    aria-selected="true"
    class="rounded-md transition-colors bg-accent"
    data-testid="mention-popover-item-0"
    role="option"
  >
    <div
      data-testid="user-suggestion-user1"
    >
      John Doe
    </div>
  </div>
  <div
    aria-selected="false"
    class="rounded-md transition-colors"
    data-testid="mention-popover-item-1"
    role="option"
  >
    <div
      data-testid="user-suggestion-user2"
    >
      Jane Smith
    </div>
  </div>
  <div
    aria-selected="false"
    class="rounded-md transition-colors"
    data-testid="mention-popover-item-2"
    role="option"
  >
    <div
      data-testid="user-suggestion-user3"
    >
      Bob Wilson
    </div>
  </div>
</div>
`;

exports[`MentionPopover > MentionPopover - Snapshots > matches snapshot with users 1`] = `
<div
  aria-label="User suggestions"
  class="absolute z-50 mt-1 w-[var(--mention-popover-width)] max-h-[var(--mention-popover-max-height)] overflow-y-auto rounded-md border border-border bg-popover p-2"
  data-cy="mention-popover"
  data-testid="mention-popover"
  role="listbox"
>
  <div
    aria-selected="false"
    class="rounded-md transition-colors"
    data-testid="mention-popover-item-0"
    role="option"
  >
    <div
      data-testid="user-suggestion-user1"
    >
      John Doe
    </div>
  </div>
  <div
    aria-selected="false"
    class="rounded-md transition-colors"
    data-testid="mention-popover-item-1"
    role="option"
  >
    <div
      data-testid="user-suggestion-user2"
    >
      Jane Smith
    </div>
  </div>
  <div
    aria-selected="false"
    class="rounded-md transition-colors"
    data-testid="mention-popover-item-2"
    role="option"
  >
    <div
      data-testid="user-suggestion-user3"
    >
      Bob Wilson
    </div>
  </div>
</div>
`;
